Se crearon nuevas interfaces. La interfaz de Vendedor y CrearPedido. Se valido tambien la manera para crear un texto que se autocomplete.

--- a/app/src/main/res/drawable/backgroundnaranjaclaro.xml
+++ b/app/src/main/res/drawable/backgroundnaranjaclaro.xml
@@ -4,7 +4,7 @@
     <!--stroke width and color-->
     <solid
         android:width="2sp"
-        android:color="#0C7238" />
+        android:color="#F7DABF" />
 
     <!-- corner radius-->
     <corners
