--- a/app/src/main/res/drawable/backgroundverdeclaro.xml
+++ b/app/src/main/res/drawable/backgroundverdeclaro.xml
@@ -4,7 +4,7 @@
     <!--stroke width and color-->
     <solid
         android:width="2sp"
-        android:color="#0C7238" />
+        android:color="#1F7D48" />
 
     <!-- corner radius-->
     <corners
