--- a/app/src/main/res/layout/activity_crear_pedido.xml
+++ b/app/src/main/res/layout/activity_crear_pedido.xml
@@ -5,66 +5,87 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo"
-    tools:context=".InicioSesion">
+    tools:context=".CrearPedido">
 
-    <!-- Sección 1 con fondo verde y foto -->
     <RelativeLayout
-        android:id="@+id/seccion1"
+        android:id="@+id/seccionAV1"
         android:layout_width="match_parent"
-        android:layout_height="300sp"
-        android:background="#4E986E"
+        android:layout_height="90sp"
+        android:background="@drawable/backgroundverdeclaro"
         tools:ignore="MissingConstraints">
 
         <ImageView
-            android:id="@+id/logo"
-            android:layout_width="300sp"
-            android:layout_height="300sp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/animalslogo" />
-
-    </RelativeLayout>
-
-    <!-- Sección 2 con espacio para botones de inicio de sesión -->
-    <RelativeLayout
-        android:id="@+id/seccion2"
-        android:layout_width="270sp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/seccion1">
+            android:layout_width="45sp"
+            android:layout_height="45sp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20sp"
+            android:src="@drawable/logoredondo" />
 
         <!-- Texto de Login -->
         <TextView
-            android:id="@+id/login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="80sp"
+            android:textColor="@color/white"
+            android:text="Hola David Perez"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="280sp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/seccionAV1" >
+
+        <!-- Texto de Login -->
+        <TextView
+            android:id="@+id/nuevopedido"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textColor="@color/black"
-            android:text="LOGIN"
-            android:layout_margin="5sp"
-            android:textSize="20sp"
+            android:textColor="@color/orange"
+            android:text="Nuevo Pedido"
+            android:layout_marginTop="40sp"
+            android:textSize="32sp"
+            android:textStyle="bold" />
+
+        <!-- Texto de Sugerencia -->
+        <TextView
+            android:id="@+id/titulodatos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:textColor="@color/gris"
+            android:text="Ingresa los datos del cliente"
+            android:layout_below="@id/nuevopedido"
+            android:layout_marginTop="10sp"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
         <!-- Texto de nombre de usuario -->
         <TextView
-            android:id="@+id/lbusuario"
+            android:id="@+id/lbcliente"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/login"
+            android:layout_below="@id/titulodatos"
             android:layout_marginTop="30sp"
-            android:text="NOMBRE DE USUARIO"
+            android:text="CLIENTE"
             android:textColor="@color/black"
             android:textSize="13sp" />
 
         <!-- Capturar usuario -->
-        <EditText
-            android:id="@+id/usuario"
+        <AutoCompleteTextView
+            android:id="@+id/cliente"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/background"
-            android:layout_below="@id/lbusuario"
+            android:layout_below="@id/lbcliente"
             android:padding="16sp"
             android:layout_marginTop="5sp"
-            android:hint="USUARIO"
+            android:hint="NOMBRE"
             android:textColorHint="#0C7238"
             android:textColor="#0C7238"
             android:inputType="textEmailAddress"
@@ -73,67 +94,44 @@
 
         <!-- Texto de nombre de usuario -->
         <TextView
-            android:id="@+id/lbcontrasena"
+            android:id="@+id/lbsucursal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/usuario"
-            android:layout_marginTop="20sp"
-            android:text="CONTRASEÑA"
+            android:layout_below="@id/cliente"
+            android:layout_marginTop="30sp"
+            android:text="SUCURSAL"
             android:textColor="@color/black"
             android:textSize="13sp" />
 
         <!-- Capturar usuario -->
-        <EditText
-            android:id="@+id/contrasena"
+        <AutoCompleteTextView
+            android:id="@+id/sucursal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/background"
-            android:layout_below="@id/lbcontrasena"
+            android:layout_below="@id/lbsucursal"
             android:padding="16sp"
             android:layout_marginTop="5sp"
-            android:hint="*********"
+            android:hint="SEDE"
             android:textColorHint="#0C7238"
             android:textColor="#0C7238"
-            android:inputType="textPassword"
+            android:inputType="textEmailAddress"
             android:textSize="13sp"
             android:layout_gravity="center_horizontal" />
 
-        <TextView
-            android:id="@+id/olvidarusuario"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/contrasena"
-            android:layout_marginTop="10sp"
-            android:text="Olvide Contraseña"
-            android:textColor="@color/orange"
-            android:textStyle="bold"
-            android:textAlignment="textEnd"
-            android:textSize="13sp" />
-
         <Button
-            android:id="@+id/iniciarsesion"
+            android:id="@+id/continuar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/background2"
-            android:layout_below="@id/olvidarusuario"
-            android:layout_marginTop="30sp"
-            android:text="INGRESAR"
+            android:layout_below="@id/sucursal"
+            android:layout_marginTop="50sp"
+            android:text="SIGUIENTE"
             android:textColor="@color/white"
             android:textSize="20sp"
             />
 
     </RelativeLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="¿No tienes una cuenta? Registrate"
-        android:gravity="center"
-        android:layout_above="@id/seppat"
-        android:layout_marginBottom="35sp"
-        android:textColor="@color/orange"
-        android:textStyle="bold"
-        />
 
     <TextView
         android:id="@+id/seppat"
