Nuevos archivos que permiten leer base de datos de Excel

--- a/app/src/main/res/drawable/fondo.xml
+++ b/app/src/main/res/drawable/fondo.xml
@@ -4,6 +4,5 @@
     <!--stroke width and color-->
     <solid
         android:width="1sp"
-        android:color="#F1EBEB" />
-
+        android:color="#FFFFFF" />
 </shape>
