--- a/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -11,15 +11,17 @@
     <RelativeLayout
         android:id="@+id/seccion1"
         android:layout_width="match_parent"
-        android:layout_height="300sp"
-        android:background="#4E986E"
+        android:layout_height="250sp"
+        android:background="#FFFFFF"
         tools:ignore="MissingConstraints">
 
         <ImageView
             android:id="@+id/logo"
-            android:layout_width="300sp"
-            android:layout_height="300sp"
+            android:layout_width="200sp"
+            android:layout_height="200sp"
             android:layout_centerInParent="true"
+            android:layout_marginTop="5sp"
+            android:background="@drawable/circulo"
             android:src="@drawable/animalslogo" />
 
     </RelativeLayout>
@@ -27,7 +29,7 @@
     <!-- Sección 2 con espacio para botones de inicio de sesión -->
     <RelativeLayout
         android:id="@+id/seccion2"
-        android:layout_width="270sp"
+        android:layout_width="300sp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/seccion1">
@@ -37,11 +39,14 @@
             android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5sp"
+            android:layout_marginTop="5sp"
+            android:layout_marginEnd="5sp"
+            android:layout_marginBottom="5sp"
             android:gravity="center"
-            android:textColor="@color/black"
             android:text="LOGIN"
-            android:layout_margin="5sp"
-            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
         <!-- Texto de nombre de usuario -->
@@ -53,7 +58,7 @@
             android:layout_marginTop="30sp"
             android:text="NOMBRE DE USUARIO"
             android:textColor="@color/black"
-            android:textSize="13sp" />
+            android:textSize="15sp" />
 
         <!-- Capturar usuario -->
         <EditText
@@ -68,7 +73,7 @@
             android:textColorHint="#0C7238"
             android:textColor="#0C7238"
             android:inputType="textEmailAddress"
-            android:textSize="13sp"
+            android:textSize="15sp"
             android:layout_gravity="center_horizontal" />
 
         <!-- Texto de nombre de usuario -->
@@ -80,7 +85,7 @@
             android:layout_marginTop="20sp"
             android:text="CONTRASEÑA"
             android:textColor="@color/black"
-            android:textSize="13sp" />
+            android:textSize="15sp" />
 
         <!-- Capturar usuario -->
         <EditText
@@ -95,7 +100,7 @@
             android:textColorHint="#0C7238"
             android:textColor="#0C7238"
             android:inputType="textPassword"
-            android:textSize="13sp"
+            android:textSize="15sp"
             android:layout_gravity="center_horizontal" />
 
         <TextView
@@ -108,7 +113,7 @@
             android:textColor="@color/orange"
             android:textStyle="bold"
             android:textAlignment="textEnd"
-            android:textSize="13sp" />
+            android:textSize="15sp" />
 
         <Button
             android:id="@+id/iniciarsesion"
@@ -116,7 +121,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/background2"
             android:layout_below="@id/olvidarusuario"
-            android:layout_marginTop="30sp"
+            android:layout_marginTop="20sp"
             android:text="INGRESAR"
             android:textColor="@color/white"
             android:textSize="20sp"
@@ -129,10 +134,11 @@
         android:layout_height="wrap_content"
         android:text="¿No tienes una cuenta? Registrate"
         android:gravity="center"
-        android:layout_above="@id/seppat"
-        android:layout_marginBottom="35sp"
+        android:layout_below="@id/seccion2"
+        android:layout_marginTop="10sp"
         android:textColor="@color/orange"
         android:textStyle="bold"
+        android:textSize="15sp"
         />
 
     <TextView
